--- a/records.css
+++ b/records.css
@@ -1,27 +1,22 @@
+
+table.sortable th {
+    background-color:#eee;
+    color:black;
+    font-weight: bold;
+    cursor: default;
+}
 body {
 	font-family: helvetica;
 
 }
-table {
-    border-collapse: collapse;
-}
-td {
-	padding-right: 10px;
-	padding-left: 5px;
-	height: 25px;
-}
+
 .center-text {
 	text-align: center;
-}
-/* Sortable tables */
-table.sortable thead {
-    background-color:#eee;
-    color:#666666;
-    font-weight: bold;
-    cursor: default;
 }
 tr:nth-child(even) { 
 	background: #888888; 
 	color: white;
-
+}
+h1 {
+	font-size:18px;
 }
